--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
+
+
+
 body {
   background-color: #e5e5e5;
   color: #212121;
+  font-family: Roboto, sans-serif;
+
 }
 .logo {
   color: #000000;
+  font-family: Raleway;
 }
+
 .logo-part {
   color: #2196f3;
 }
