--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,13 @@ body {
   background-color: #e5e5e5;
   color: #212121;
   font-family: Roboto, sans-serif;
-
+  letter-spacing: 0.02em; 
 }
 .logo {
   color: #000000;
   font-family: Raleway;
+  font-size: 26px;
+  line-height: 31px;
 }
 
 .logo-part {
