--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   --primary-text-color: #212121;
   --title-text-color: #757575;
   --accent-color: #2196f3;
-  --white-color: #ffffff;
+  --primary-white-color: #ffffff;
   --filters-color: #f5f4fa;
 }
 
@@ -15,6 +15,10 @@ body {
 .logo {
   color: #000000;
   font-family: Raleway;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
 }
 .logo-part {
   color: var(--accent-color);
@@ -25,14 +29,27 @@ body {
 .menu-link {
   color: var(--primary-text-color);
   font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
 }
 
 .menu-link.active {
   color: var(--accent-color);
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
 }
 .contacts-list {
   font-family: Roboto;
   color: var(--title-text-color);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
 }
 .contacts-list:hover,
 .contacts-list:focus {
@@ -41,7 +58,7 @@ body {
 
 .main-filter-button {
   font-family: Roboto;
-  color: var(--white-color);
+  color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
 
@@ -62,8 +79,8 @@ body {
   color: var(--title-text-color);
 }
 .contacts-item {
-  color: var(--white-color);
+  color: var(--primary-white-color);
 }
 .logo-part-one {
-  color: var(--white-color);
+  color: var(--primary-white-color);
 }
