--- a/css/style.css
+++ b/css/style.css
@@ -82,13 +82,37 @@ button {
 .projects-title {
   font-family: Roboto;
   color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 36px;
 }
 .projects-sections {
   color: var(--title-text-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
 }
 .contacts-item {
   color: var(--primary-white-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+}
+.logo {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
 }
 .logo-part-one {
   color: var(--primary-white-color);
+}
+.contacts-link-footer {
+  color: rgba(255, 255, 255, 0.6);
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
 }
