--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,12 @@ button {
 }
 
 /* стили css для index.thml */
+
+.section-title {
+  font-family: Roboto;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+}
