--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,19 @@ button {
   color: var(--primary-white-color);
   border-radius: 4px;
 }
+.features-title {
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+.features-text {
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
