--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ button {
   font-size: 16px;
   line-height: 1.62;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 .main-filter-button:hover,
@@ -96,7 +97,6 @@ button {
 }
 .logo {
   font-family: Raleway;
-  font-style: normal;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -106,7 +106,6 @@ button {
 }
 .contacts-link-footer {
   color: rgba(255, 255, 255, 0.6);
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 2;
