--- a/css/style.css
+++ b/css/style.css
@@ -4,23 +4,27 @@
   --accent-color: #2196f3;
   --primary-white-color: #ffffff;
   --filters-color: #f5f4fa;
+  --main-bcg-color: #2f303a;
 }
 
 body {
-  background-color: #e5e5e5;
+  background-color: var(--primary-white-color);
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
+  font-size: 14px;
 }
 
 .logo {
-  color: #000000;
+  color: var(--primary-text-color);
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.19;
+  text-decoration: none;
 }
 .logo-part {
-  color: var(--accent-color);
+  color: var(--primary-white-color);
+  text-decoration: none;
 }
 .list {
   list-style: none;
@@ -30,27 +34,31 @@ body {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
+  text-decoration: none;
 }
 
 .menu-link.active {
   color: var(--accent-color);
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.14px;
+  line-height: 1.14;
+}
+.contacts {
+  background-color: var(--main-bcg-color);
+  list-style: none;
 }
 .contacts-list {
   color: var(--title-text-color);
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.2;
+  text-decoration: none;
+  list-style: none;
 }
 .contacts-list:hover,
 .contacts-list:focus {
-  color: tomato;
+  color: blue;
 }
-button {
-  font-family: inherit;
-}
+
 .main-filter-button {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
@@ -63,7 +71,7 @@ button {
 
 .main-filter-button:hover,
 .main-filter-button:focus {
-  color: tomato;
+  color: blue;
 }
 .filter-button {
   color: var(--primary-text-color);
@@ -72,6 +80,16 @@ button {
   font-size: 16px;
   line-height: 1.62;
   border-radius: 4px;
+}
+.main-section {
+  background-color: var(--main-bcg-color);
+}
+
+.projects {
+  text-decoration: none;
+}
+.projects-list {
+  list-style: none;
 }
 .projects-title {
   color: var(--primary-text-color);
@@ -90,12 +108,19 @@ button {
   line-height: 2;
 }
 .logo {
+  color: var(--accent-color);
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
 }
 .logo-part-one {
+  color: var(--primary-text-color);
+}
+.logo-part-secondary {
+  color: var(--primary-white-color);
+}
+.logo-part {
   color: var(--primary-white-color);
 }
 .contacts-link-footer {
@@ -103,19 +128,21 @@ button {
   font-size: 14px;
   line-height: 2;
 }
+.location {
+  font-style: normal;
+}
 
 /* стили css для index.thml */
 
 .section-title {
-  font-family: Roboto;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
-  color: #ffffff;
+  color: var(--primary-white-color);
 }
+
 .order-button {
-  font-family: Roboto;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -123,8 +150,10 @@ button {
   color: var(--primary-white-color);
   border-radius: 4px;
 }
+.features {
+  list-style: none;
+}
 .features-title {
-  font-family: Roboto;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -132,23 +161,35 @@ button {
   color: var(--primary-text-color);
 }
 .features-text {
-  font-family: Roboto;
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
+.example-list {
+  list-style: none;
+}
+.team {
+  background-color: var(--filters-color);
+}
+
 .work-title {
-  font-family: Roboto;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
+.team-photo {
+  background-color: var(--primary-white-color);
+}
+.team-list {
+  list-style: none;
+}
+.team-leads {
+  background-color: var(--primary-white-color);
+}
 .team-name {
-  font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -156,8 +197,6 @@ button {
   color: var(--primary-text-color);
 }
 .position {
-  font-family: Roboto;
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
